🐛 fix: overlapping of the entire page due to the last commit

--- a/packages/frontend/src/components/blocks/Categories/Categories.module.scss
+++ b/packages/frontend/src/components/blocks/Categories/Categories.module.scss
@@ -19,6 +19,7 @@
 }
 
 .categoryItem {
+    position: relative;
     border-radius: 20px;
     background: linear-gradient(180deg, rgba(23,29,46,1) 64%, rgba(5,11,28,1) 100%);
     padding: 15px 15px 0 15px;
